--- a/FrontEnd/custom_form/form.html
+++ b/FrontEnd/custom_form/form.html
@@ -72,9 +72,9 @@
         <div class="row setup-content" id="step-2">
             <div class="col-xs-12">
                 <div class="col-md-12 well text-center">
-                    <h1 class="text-center"> STEP 2</h1>
+                    <h3 > Date privind pregătirea anterioară a candidatului</h3>
 
-                    <!--<form></form> -->
+                    <form2 id = "myform2"></form2>
 
                     <button id="activate-step-3" class="btn btn-primary btn-md">Activate Step 3</button>
                 </div>
