--- a/FrontEnd/dashboard/dashboard.html
+++ b/FrontEnd/dashboard/dashboard.html
@@ -4,26 +4,52 @@
 <title>Dashboard Admin </title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="dashboard.css" type="text/css" media="screen">
+<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Montserrat:700,400|Roboto:400,100,300,500,900'
+    rel='stylesheet' type='text/css'>
 </head>
 <body bgcolor="#e6e6e6">
 
 <ul>
+
+<div class="logo"></div>
+
+ <!-- <li><div class="avatar"></div><h3>John Smith</h3></li> -->
+
+<div class="content">
+    <img src="avatar.png"/ alt="" width="50px">
+    <h3>John Smith</h3>
+</div>​
+
+
+
   <li><a class="active" href="#dash">Dashboard</a></li>
   <li><a href="#settings">Settings</a></li>
   <li><a href="#form">Application Form</a></li>
   <li><a href="#disconn">Disconnect</a></li>
   <br>
-<hr>
-<br><br><br><br><br><br><br><br><br><br>
-<p>Contact<br></p>
-    <p> Adress:<br>
-    Facultatea de informatica,<br>
-    Universitatea "Al. I. Cuza",<br>
-    General Berthelot, 16, IASI <br>
-    700483, ROMANIA <br>
-    Phone: +40 232 201090<br>
-    E-mail: secretariat@info.uaic.ro</p>
+  <hr>
+  <br><br><br><br><br><br>
+  <br><br><br><br><br>
+
+      <p id="contact">
+        Contact<br>
+        Adress:<br>
+        Facultatea de informatica,<br>
+        Universitatea "Al. I. Cuza",<br>
+        General Berthelot, 16, IASI <br>
+        700483, ROMANIA <br>
+        Phone: +40 232 201090<br>
+        E-mail: secretariat@info.uaic.ro
+      	</p>
 </ul>
+
+ <div id="section-dash" class="tab-content" style="margin-left:20%;padding:1px 16px;height:1000px;">
+ <input type="text" name="search" placeholder="Search">
+
+
+
+
+</div>
 
 </body>
 </html>
