--- a/FrontEnd/dashboard/dashboard.html
+++ b/FrontEnd/dashboard/dashboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Dashboard Admin </title>
+<title>Dashboard </title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="dashboard.css" type="text/css" media="screen">
 <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Montserrat:700,400|Roboto:400,100,300,500,900'
