[FrontEnd] Form step 2

--- a/FrontEnd/custom_form/form.html
+++ b/FrontEnd/custom_form/form.html
@@ -74,7 +74,8 @@
                 <div class="col-md-12 well text-center">
                     <h1 class="text-center"> STEP 2</h1>
 
-                    <!--<form></form> -->
+                    
+                         <form2 id="myform2"></form2>
 
                     <button id="activate-step-3" class="btn btn-primary btn-md">Activate Step 3</button>
                 </div>
