[FrontEnd]Form step 3

--- a/FrontEnd/custom_form/form.html
+++ b/FrontEnd/custom_form/form.html
@@ -88,7 +88,7 @@
                 <div class="col-md-12 well text-center">
                     <h1 class="text-center"> STEP 3</h1>
 
-                    <!--<form></form> -->
+                    <form3 id="myform3"></form3>
 
                     <button id="activate-step-4" class="btn btn-primary btn-md">Activate Step 4</button>
                 </div>
