--- a/FrontEnd/custom_form/form.html
+++ b/FrontEnd/custom_form/form.html
@@ -45,7 +45,7 @@
                             <h4 class="list-group-item-heading">Pas 6</h4>
                         </a>
                     </li>
-                    <li class="disabled">
+                    <li >
                         <a href="#step-7">
                             <h4 class="list-group-item-heading">Pas 7</h4>
                         </a>
@@ -102,7 +102,20 @@
                 <div class="col-md-12 well text-center">
                     <h1 class="text-center"> STEP 4</h1>
 
-                    <!--<form></form> -->
+                    <form4 id="myform4"></form4>
+
+                </div>
+            </div>
+        </div>
+    </form>
+     <form class="container">
+
+        <div class="row setup-content" id="step-7">
+            <div class="col-xs-12">
+                <div class="col-md-12 well text-center">
+                    <h1 class="text-center"> STEP 7</h1>
+
+                    <form7 id="myform7"></form7>
 
                 </div>
             </div>
