--- a/FrontEnd/custom_form/form.html
+++ b/FrontEnd/custom_form/form.html
@@ -35,7 +35,7 @@
                             <h4 class="list-group-item-heading">Pas 4</h4>
                         </a>
                     </li>
-                    <li class="disabled">
+                    <li>
                         <a href="#step-5">
                             <h4 class="list-group-item-heading">Pas 5</h4>
                         </a>
@@ -108,7 +108,21 @@
             </div>
         </div>
     </form>
+    <form class="container">
+
+        <div class="row setup-content" id="step-5">
+            <div class="col-xs-12">
+                <div class="col-md-12 well text-center">
+                    <h1 class="text-center"> STEP 5</h1>
+
+                    <form5 id="myform5"></form5>
+
+                </div>
+            </div>
+        </div>
+    </form>
      <form class="container">
+
 
         <div class="row setup-content" id="step-7">
             <div class="col-xs-12">
