--- a/FrontEnd/dashboard/dashboard.html
+++ b/FrontEnd/dashboard/dashboard.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Dashboard </title>
+<title>Dashboard</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="dashboard.css" type="text/css" media="screen">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Montserrat:700,400|Roboto:400,100,300,500,900'
     rel='stylesheet' type='text/css'>
 </head>
 <body bgcolor="#e6e6e6">
+
+
+
+
 
 <ul>
 
@@ -28,7 +33,7 @@
   <li><a href="#disconn">Disconnect</a></li>
   <br>
   <hr>
-  <br><br><br><br><br><br>
+  <br><br><br><br><br>
   <br><br><br><br><br>
 
       <p id="contact">
@@ -43,13 +48,68 @@
       	</p>
 </ul>
 
- <div id="section-dash" class="tab-content" style="margin-left:20%;padding:1px 16px;height:1000px;">
+<!-- <div id="section-dash" class="tab-content" style="margin-left:20%;padding:1px 16px;height:1000px;">
  <input type="text" name="search" placeholder="Search">
+ -->
+
+<div class="main">
+
+  <div id="header">
+    <!-- <div class="header-nav"> -->
+       <input type="text" name="search" placeholder="Search..">
+    <!-- </div>-->
+   </div>
+
+   <div class="widget-box sample-widget2">
+         <div class="widget-header">
+           <h2>Statusul aplicatiei:</h2>
+           <i class="fa fa-cog"></i>
+         </div>
+         <div class="widget-content">
+           <h2> Verificat</h2>
+         </div>
+       </div>
+
+
+           <div class="widget-box sample-widget2">
+                 <div class="widget-header">
+                   <h2>Zile ramase:</h2>
+                   <i class="fa fa-cog"></i>
+                 </div>
+                 <div class="widget-content">
+                   <h2> 25</h2>
+                 </div>
+               </div>
+
+
+ <div class="widget-box sample-widget">
+       <div class="widget-header">
+         <h2>Evolutie</h2>
+         <i class="fa fa-cog"></i>
+       </div>
+       <div class="widget-content">
+         <img src="info.png" width="100%">
+       </div>
+     </div>
 
 
 
+  <div class="widget-box sample-widget">
+        <div class="widget-header">
+          <h2>Anunturi</h2>
+          <i class="fa fa-cog"></i>
+        </div>
+        <div class="widget-content">
+          <p>Inscrierile pentru licenta s-au terminat. S-au inscris 291 candidati.</p>
+          <p>Examenul de admitere va avea loc in data de 29 Iunie 2017.</p>
+          <p>A aparut lista cu repartizari pe sali. O poti verifica pe https://docs.google.com/document/u/0/.</p>
+          <p>S-au deschis inscrierile pentru licenta 2017. Ai timp sa te inscrii pana pe 17 iunie.</p>
+        </div>
+      </div>
 
-</div>
+   </div>
+
+  </div>
 
 </body>
 </html>
