--- a/FrontEnd/dashboard/dashboard.html
+++ b/FrontEnd/dashboard/dashboard.html
@@ -22,7 +22,7 @@
 
 <div class="content">
     <img src="avatar.png"/ alt="" width="50px">
-    <h3>John Smith</h3>
+    <h2>John Smith</h2>
 </div>​
 
 
@@ -30,11 +30,11 @@
   <li><a class="active" href="#dash">Dashboard</a></li>
   <li><a href="#settings">Settings</a></li>
   <li><a href="#form">Application Form</a></li>
-  <li><a href="#disconn">Disconnect</a></li>
+  <li><a href="#disconn">Disconnect</i></a></li>
   <br>
   <hr>
   <br><br><br><br><br>
-  <br><br><br><br><br>
+  <br><br><br><br><br><br>
 
       <p id="contact">
         Contact<br>
@@ -66,20 +66,40 @@
            <i class="fa fa-cog"></i>
          </div>
          <div class="widget-content">
-           <h2> Verificat</h2>
+           <h3> Verificat</h3>
          </div>
        </div>
 
 
            <div class="widget-box sample-widget2">
                  <div class="widget-header">
-                   <h2>Zile ramase:</h2>
+                   <h2>Timp ramas pana la examen:</h2>
                    <i class="fa fa-cog"></i>
                  </div>
                  <div class="widget-content">
-                   <h2> 25</h2>
+                   <h3> 25 de zile</h3>
                  </div>
                </div>
+
+               <div class="widget-box sample-widget2">
+                     <div class="widget-header">
+                       <h2>Timp ramas pana la rezultate:</h2>
+                       <i class="fa fa-cog"></i>
+                     </div>
+                     <div class="widget-content">
+                       <h3> 30 de zile</h3>
+                     </div>
+                   </div>
+
+                   <div class="widget-box sample-widget2">
+                         <div class="widget-header">
+                           <h2>Statistici:</h2>
+                           <i class="fa fa-cog"></i>
+                         </div>
+                         <div class="widget-content">
+                           <h3> S-au inscris 127 de candidati.</h3>
+                         </div>
+                       </div>
 
 
  <div class="widget-box sample-widget">
@@ -88,7 +108,7 @@
          <i class="fa fa-cog"></i>
        </div>
        <div class="widget-content">
-         <img src="info.png" width="100%">
+         <img src="info.png" width="50%"  >
        </div>
      </div>
 
