--- a/FrontEnd/dashboard/dashboard.html
+++ b/FrontEnd/dashboard/dashboard.html
@@ -122,7 +122,8 @@
         <div class="widget-content">
           <p>Inscrierile pentru licenta s-au terminat. S-au inscris 291 candidati.</p>
           <p>Examenul de admitere va avea loc in data de 29 Iunie 2017.</p>
-          <p>A aparut lista cu repartizari pe sali. O poti verifica pe https://docs.google.com/document/u/0/.</p>
+          <p>A aparut lista cu repartizari pe sali. O poti verifica pe https://docs.google.com/document/.</p>
+          <p>Actele necesare pentru inscriere la admitere se gasesc aici: https://docs.google.com/document.</p>
           <p>S-au deschis inscrierile pentru licenta 2017. Ai timp sa te inscrii pana pe 17 iunie.</p>
         </div>
       </div>
