--- a/FrontEnd/landing_page/index.html
+++ b/FrontEnd/landing_page/index.html
@@ -16,13 +16,6 @@
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body>
@@ -68,7 +61,7 @@
                 <div class="intro">
                     <h1>Bine ai venit la <br> Facultatea de Informatica Ia&#351;i</h1>
                     <h2>Al&#259;tur&#259;-te facult&#259;&#355;ii noastre! Creeaz&#259;&#355;i un cont, ap&#259;s&#226;nd butonul de mai jos.</h2>
-                    <a href="#"><button>LOG IN</button></a>
+                    <a href="#"><button>SIGN UP</button></a>
                 </div>
             </div>
         </div>
@@ -77,7 +70,7 @@
     <section id="beneficii">
         <div class="container">
             <div class="row">
-                <div class="col-sm-7">
+                <div class="col-md-7">
                     <div class="header-content">
                         <div class="header-content-inner">
                             <h1>Ce iti oferim?</h1>
@@ -96,10 +89,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-2"></div>
-                <div class="col-sm-3">
+                <div class="col-md-2"></div>
+                <div class="col-md-3">
                     <div class="device-container" id="padded">
-                        <img src="./images/success.png">
+                        <img src="./images/success.png" alt="Success">
                     </div>
                 </div>
             </div>
@@ -109,7 +102,7 @@
     <section id="impresii">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-md-12">
                     <div class="header-content">
                         <div class="header-content-inner">
                             <h1>Ce spun studentii nostri?</h1>
@@ -126,36 +119,34 @@
         </div>
     </section>
 
-<section id="contact">
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="header-content">
-                        <div class="header-content-inner">
-                            <img src="./images/fii.jpg" id="contactImg">
-                            <div class="detalii">
-                            <h1>Cum ne puteti contacta?</h1>
-                            <h2>
-                                Adress: <br>
-                                Facultatea de Informatica, Universitatea "Al. I. Cuza", <br>
-                                General Berthelot, 16, <br>
-                                IASI, 700483, ROMANIA <br>
-                            </h2>
-                            <h2>Phone: <a href="tel:+40232201090">+40 232 201 090</a></h2>
-                            <h2>Fax: +40 232 201 490</h2>
-                            <h2>E-mail: <a href="mailto:secretariat@info.uaic.ro">secretariat@info.uaic.ro</a></h2>
+    <section id="contact">
+        <div class="col-md-12">
+            <div class="header-content">
+                <div class="header-content-inner">
+                    <img src="./images/fii.jpg" id="contactImg" alt="FII">
+                    <div class="detalii">
+                    <h1>Cum ne puteti contacta?</h1>
+                    <h2>
+                        Adress: <br>
+                        Facultatea de Informatica, Universitatea "Al. I. Cuza", <br>
+                        General Berthelot, 16, <br>
+                        IASI, 700483, ROMANIA <br>
+                    </h2>
+                    <h2>Phone: <a href="tel:+40232201090">+40 232 201 090</a></h2>
+                    <h2>Fax: +40 232 201 490</h2>
+                    <h2>E-mail: <a href="mailto:secretariat@info.uaic.ro">secretariat@info.uaic.ro</a></h2>
 
-                                <!-- Social -->
-                                <div class="social">
-                                <img src="./images/facebook.png">
-                                <img src="./images/twitter.png">
-                                <img src="./images/linkedin.png">
-
-                                </div>
-                            </div>
+                        <!-- Social -->
+                        <div class="social">
+                        <img src="./images/facebook.png" alt="Facebook">
+                        <img src="./images/twitter.png" alt="Twitter">
+                        <img src="./images/linkedin.png" alt="LinkedIn">
                         </div>
+
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 
     <footer>
