--- a/FrontEnd/landing_page/index.html
+++ b/FrontEnd/landing_page/index.html
@@ -138,11 +138,10 @@
 
                         <!-- Social -->
                         <div class="social">
-                        <img src="./images/facebook.png" alt="Facebook">
-                        <img src="./images/twitter.png" alt="Twitter">
-                        <img src="./images/linkedin.png" alt="LinkedIn">
+                        <a href="#"><img src="./images/facebook.png" alt="Facebook"></a>
+                        <a href="#"><img src="./images/twitter.png" alt="Twitter"></a>
+                        <a href="#"><img src="./images/linkedin.png" alt="LinkedIn"></a>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -151,18 +150,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2017 Facultatea de Informatica Iasi. All Rights Reserved.</p>
-            <ul class="list-inline">
-                <li>
-                    <a href="#">Privacy</a>
-                </li>
-                <li>
-                    <a href="#">Terms</a>
-                </li>
-                <li>
-                    <a href="#">FAQ</a>
-                </li>
-            </ul>
+            <h4>&copy; 2017 Facultatea de Informatica Iasi. All Rights Reserved.</h4>
         </div>
     </footer>
 
