--- a/FrontEnd/dashboard/dashboard_admin.html
+++ b/FrontEnd/dashboard/dashboard_admin.html
@@ -29,9 +29,9 @@
 
   <li><a class="active" href="#dash">Dashboard</a></li>
   <li><a href="#settings">Settings</a></li>
-  <li><a href="#form">View Applications</a></li>
-  <li><a href="#form">Teachers</a></li>
-  <li><a href="#form">Classrooms</a></li>
+  <li><a href="#view">View Applications</a></li>
+  <li><a href="#teachers">Teachers</a></li>
+  <li><a href="#class">Classrooms</a></li>
   <li><a href="#disconn">Disconnect</a></li>
   <br>
   <hr>
