--- a/FrontEnd/dashboard/dashboard.html
+++ b/FrontEnd/dashboard/dashboard.html
@@ -29,7 +29,9 @@
 
   <li><a class="active" href="#dash">Dashboard</a></li>
   <li><a href="#settings">Settings</a></li>
-  <li><a href="#form">Application Form</a></li>
+  <li><a href="#view">View Applications</a></li>
+  <li><a href="#teachers">Teachers</a></li>
+  <li><a href="#class">Classrooms</a></li>
   <li><a href="#disconn">Disconnect</i></a></li>
   <br>
   <hr>
