Modified contact layout

--- a/FrontEnd/landing_page/index.html
+++ b/FrontEnd/landing_page/index.html
@@ -120,10 +120,11 @@
     </section>
 
     <section id="contact">
-        <div class="col-md-12">
-            <div class="header-content">
-                <div class="header-content-inner">
-                    <img src="./images/fii.jpg" id="contactImg" alt="FII">
+        <div class="container">
+            <div class="leftSide">
+                <img src="./images/fii.jpg" id="contactImg" alt="FII">
+            </div>
+            <div class="rightSide">
                     <div class="detalii">
                     <h1>Cum ne puteti contacta?</h1>
                     <h2>
