Removed some spaces and added some comments

--- a/FrontEnd/landing_page/index.html
+++ b/FrontEnd/landing_page/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html class="full" lang="en">
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,12 +14,10 @@
 
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
-
 </head>
 
 <body>
-
-    <!-- Navigation -->
+<!-- Navigation -->
     <nav class="navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -46,7 +43,7 @@
                         <a href="#contact"><h3>Contact</h3></a>
                     </li>
                 </ul>
-                  <div class="right">
+                <div class="right">
                     <a href="#"><button>LOG IN</button></a>
                 </div>
             </div>
@@ -55,6 +52,7 @@
         <!-- /.container -->
     </nav>
 
+<!-- Landing Page -->
     <header>
         <div class="container">
             <div class="col-md-7">
@@ -67,6 +65,7 @@
         </div>
     </header>
 
+<!-- Beneficii -->
     <section id="beneficii">
         <div class="container">
             <div class="row">
@@ -99,6 +98,7 @@
         </div>
     </section>
 
+<!-- Impresii -->
     <section id="impresii">
         <div class="container">
             <div class="row">
@@ -119,6 +119,7 @@
         </div>
     </section>
 
+<!-- Contact -->
     <section id="contact">
         <div class="container">
             <div class="leftSide">
@@ -149,18 +150,17 @@
         </div>
     </section>
 
+<!-- Footer -->
     <footer>
         <div class="container">
             <h4>&copy; 2017 Facultatea de Informatica Iasi. All Rights Reserved.</h4>
         </div>
     </footer>
 
+<!-- Scripts -->
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
-
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
 </body>
-
 </html>
