--- a/FrontEnd/landing_page/index.html
+++ b/FrontEnd/landing_page/index.html
@@ -57,7 +57,7 @@
         <div class="container">
             <div class="col-md-7">
                 <div class="intro">
-                    <h1>Bine ai venit la <br> Facultatea de Informatica Ia&#351;i</h1>
+                    <h1>Bine ai venit la <br> Facultatea de Informatic&#259; Ia&#351;i</h1>
                     <h2>Al&#259;tur&#259;-te facult&#259;&#355;ii noastre! Creeaz&#259;&#355;i un cont, ap&#259;s&#226;nd butonul de mai jos.</h2>
                     <a href="#"><button>SIGN UP</button></a>
                 </div>
@@ -72,17 +72,17 @@
                 <div class="col-md-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>Ce iti oferim?</h1>
+                            <h1>Ce i&#355;i oferim?</h1>
                             <h2>
                                 <ul>
                                     <li>un mediu academic stimulativ</li>
-                                    <li>flexibilitate in alegerea programului de studii</li>
-                                    <li>tehnologii software de varf</li>
-                                    <li>laboratoare cu dotari de ultima ora</li>
-                                    <li>acces gratuit la documentatii si software</li>
-                                    <li>oportunitati de stagii in strainatate</li>
-                                    <li>echipa de prieteni</li>
-                                    <li>o diploma recunoscuta si apreciata de toate universitatile si companiile software din lume</li>
+                                    <li>flexibilitate &#238;n alegerea programului de studii</li>
+                                    <li>tehnologii software de v&#226;rf</li>
+                                    <li>laboratoare cu dot&#259;ri de ultim&#259; or&#259;</li>
+                                    <li>acces gratuit la documenta&#355;ii &#351;i software</li>
+                                    <li>oportunit&#259;&#355;i de stagii &#238;n strainatate</li>
+                                    <li>echip&#259; de prieteni</li>
+                                    <li>o diplom&#259; recunoscut&#259; &#351;i apreciat&#259; de toate universit&#259;&#355;ile &#351;i companiile software din lume</li>
                                 </ul>
                             </h2>
                         </div>
@@ -105,12 +105,12 @@
                 <div class="col-md-12">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>Ce spun studentii nostri?</h1>
-                            <blockquote id="first"><h4>Sunt un absolvent al Facultatii de Informatica a Universitatii "Alexandru Ioan Cuza" din Iasi. Ma consider, din acest punct de vedere, o persoana privilegiata ca am avut sansa sa fiu educat de profesori recunoscuti si deschisi, si sa am colegi studenti de la care am avut multe de invatat. <br> Prin aceasta scoala, am reusit sa fructific oportunitati, necesare si deschise tuturor colegilor; din altruism, va invit sa le descoperiti singuri..."</h4>
-                            <h4 id="right">Alexandru Pruteanu (absolvent FII 2001), Microsoft Romania</h4>
+                            <h1>Ce spun studen&#355;ii no&#351;tri?</h1>
+                            <blockquote id="first"><h4>Sunt un absolvent al Facult&#259;&#355;ii de Informatic&#259; a Universit&#259;&#355;ii "Alexandru Ioan Cuza" din Ia&#351;i. M&#259; consider, din acest punct de vedere, o persoan&#259; privilegiat&#259; c&#259; am avut sansa s&#259; fiu educat de profesori recunoscu&#355;i &#351;i deschi&#351;i, &#351;i s&#259; am colegi studen&#355;i de la care am avut multe de &#238;nv&#259;&#355;at. <br> Prin aceast&#259; &#351;coal&#259;, am reu&#351;it s&#259; fructific oportunit&#259;&#355;i, necesare &#351;i deschise tuturor colegilor; din altruism, v&#259; invit s&#259; le descoperi&#355;i singuri..."</h4>
+                            <h4 id="right">Alexandru Pruteanu (absolvent FII 2001), Microsoft Rom&#226;nia</h4>
                             </blockquote>
-                            <blockquote><h4>Informatica nu e un drum pe care, o data intrat, sa nu mai poti devia. Din contra, sunt o multime de cai prin biologie (bio-informatica), arta (grafica, design), medicina (lucrul cu imagini medicale), movie industry (efecte speciale gen Matrix), economie (baze de date, securitatea tranzactiilor), fizica (informatica cuantica), si cate altele.</h4>
-                            <h4 id="right">Alexandrina Orzan (absolventa FII 2003), cercetator in echipa MAVERICK, INRIA, Rhone-Alpes</h4>
+                            <blockquote><h4>Informatica nu e un drum pe care, o dat&#259; intrat, s&#259; nu mai po&#355;i devia. Din contra, sunt o mul&#355;ime de c&#259;i prin biologie (bio-informatic&#259;), art&#259; (grafic&#259;, design), medicin&#259; (lucrul cu imagini medicale), movie industry (efecte speciale gen Matrix), economie (baze de date, securitatea tranzac&#355;iilor), fizic&#259; (informatic&#259; cuantic&#259;), &#351;i c&#226;te altele.</h4>
+                            <h4 id="right">Alexandrina Orzan (absolvent&#259; FII 2003), cercet&#259;tor &#238;n echipa MAVERICK, INRIA, Rh&ocirc;ne-Alpes</h4>
                             </blockquote>
                         </div>
                     </div>
@@ -127,14 +127,14 @@
             </div>
             <div class="rightSide">
                     <div class="detalii">
-                    <h1>Cum ne puteti contacta?</h1>
+                    <h1>Cum ne pute&#355;i contacta?</h1>
                     <h2>
-                        Adress: <br>
-                        Facultatea de Informatica, Universitatea "Al. I. Cuza", <br>
+                        Adres&#259;: <br>
+                        Facultatea de Informatic&#259;, Universitatea "Al. I. Cuza", <br>
                         General Berthelot, 16, <br>
-                        IASI, 700483, ROMANIA <br>
+                        IA&#350;I, 700483, ROM&#194;NIA <br>
                     </h2>
-                    <h2>Phone: <a href="tel:+40232201090">+40 232 201 090</a></h2>
+                    <h2>Telefon: <a href="tel:+40232201090">+40 232 201 090</a></h2>
                     <h2>Fax: +40 232 201 490</h2>
                     <h2>E-mail: <a href="mailto:secretariat@info.uaic.ro">secretariat@info.uaic.ro</a></h2>
 
@@ -153,7 +153,7 @@
 <!-- Footer -->
     <footer>
         <div class="container">
-            <h4>&copy; 2017 Facultatea de Informatica Iasi. All Rights Reserved.</h4>
+            <h4>&copy; 2017 Facultatea de Informatic&#259; Ia&#351;i. Toate drepturile rezervate.</h4>
         </div>
     </footer>
 
