--- a/FrontEnd/landing_page/index.html
+++ b/FrontEnd/landing_page/index.html
@@ -16,7 +16,7 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body>
+<body id="top">
 <!-- Navigation -->
     <nav class="navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><img src="./images/logo.png"></a>
+                <a class="navbar-brand" href="#top"><img src="./images/logo.png" alt="FII Admis logo"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -140,9 +140,9 @@
 
                         <!-- Social -->
                         <div class="social">
-                        <a href="#"><img src="./images/facebook.png" alt="Facebook"></a>
-                        <a href="#"><img src="./images/twitter.png" alt="Twitter"></a>
-                        <a href="#"><img src="./images/linkedin.png" alt="LinkedIn"></a>
+                        <a href="https://www.facebook.com/FacultateaDeInformaticaUAICIasi"><img src="./images/facebook.png" alt="Facebook"></a>
+                        <a href="https://twitter.com/uaiciasi"><img src="./images/twitter.png" alt="Twitter"></a>
+                        <a href="https://www.linkedin.com/grps/Facultatea-de-Informatica-Iasi-91904"><img src="./images/linkedin.png" alt="LinkedIn"></a>
                         </div>
                     </div>
                 </div>
@@ -153,14 +153,16 @@
 <!-- Footer -->
     <footer>
         <div class="container">
-            <h4>&copy; 2017 Facultatea de Informatic&#259; Ia&#351;i. Toate drepturile rezervate.</h4>
+            <h4>&copy; 2017 <a href="https://www.info.uaic.ro">Facultatea de Informatic&#259; Ia&#351;i</a>. Toate drepturile rezervate.</h4>
         </div>
     </footer>
 
 <!-- Scripts -->
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <!-- Smooth scrolling JavaScript -->
+    <script type="text/javascript" src="js/smooth.js"></script>
 </body>
 </html>
