--- a/FrontEnd/dashboard/profesori.html
+++ b/FrontEnd/dashboard/profesori.html
@@ -50,44 +50,30 @@
  -->
 
 <div class="main">
-
 <div class="widget-box sample-widget">
         <div class="widget-header">
-          <h2>Profesori:</h2>
+          <h2>Classroom:</h2>
           <i class="fa fa-cog"></i>
         </div>
         <div class="widget-content">
-           <form action="action_page.php">
-	<br><br>
-  Numele de familie:<br>
-  <input type="text" name="firstname" value="">
-  <br>
-  Prenume:<br>
-  <input type="text" name="lastname" value="">
-  <br>
-  CNP:<br>
-  <input type="number" name="lastname" value="">
-  <br><br>
-</form> 
-
-<div class="dropdown">
-<button onclick="myFunction()" class="dropbtn">Apasati pentru a selecta optiunea:</button>
-  <div id="myDropdown" class="dropdown-content">
-    <a href="#adaugare">Adaugare profesor</a>
-    <a href="#stergere">Stergere profesor</a>
-  </div>
-</div>
+          <br>
+          <label for="cod">Nume:<br>
+    			</label> <input type="text" name="cod" id="cod" value="" />
+    			<br><br>
+    			<label for="etaj">Prenume:<br>
+    			</label> <input type="text" name="etaj" id="etaj" value="" />
+    			<br><br>
+    			<label for="nr">CNP:<br>
+    			</label> <input type="number" name="nr" id="nr" value="" />
+    			<br><br>
+		<input type="submit" value="Adaugare profesor">
+		<input type="submit" value="Stergere profesor">
 
         </div>
       </div>
+</div>
+
  <br><br>
-
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js' crossorigin="anonymous"></script>
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-<script src="dash_admin.js" type="text/javascript"></script>
 
 </body>
 </html>
