Fixed some responsive issues

--- a/FrontEnd/landing_page/index.html
+++ b/FrontEnd/landing_page/index.html
@@ -122,21 +122,21 @@
 <!-- Contact -->
     <section id="contact">
         <div class="container">
-            <div class="leftSide">
+            <div class="col-md-6">
                 <img src="./images/fii.jpg" id="contactImg" alt="FII">
             </div>
-            <div class="rightSide">
+            <div class="col-md-6">
                     <div class="detalii">
                     <h1>Cum ne pute&#355;i contacta?</h1>
-                    <h2>
-                        Adres&#259;: <br>
+                    <h3>
+                        <strong>Adres&#259;: </strong><br>
                         Facultatea de Informatic&#259;, Universitatea "Al. I. Cuza", <br>
                         General Berthelot, 16, <br>
                         IA&#350;I, 700483, ROM&#194;NIA <br>
-                    </h2>
-                    <h2>Telefon: <a href="tel:+40232201090">+40 232 201 090</a></h2>
-                    <h2>Fax: +40 232 201 490</h2>
-                    <h2>E-mail: <a href="mailto:secretariat@info.uaic.ro">secretariat@info.uaic.ro</a></h2>
+                    </h3>
+                    <h3><strong>Telefon: </strong><a href="tel:+40232201090">+40 232 201 090</a></h3>
+                    <h3><strong>Fax: </strong>+40 232 201 490</h3>
+                    <h3><strong>E-mail: </strong><a href="mailto:secretariat@info.uaic.ro">secretariat@info.uaic.ro</a></h3>
 
                         <!-- Social -->
                         <div class="social">
