--- a/FrontEnd/dashboard/classroom.html
+++ b/FrontEnd/dashboard/classroom.html
@@ -66,13 +66,8 @@
     			</label> <input type="number" name="nr" id="nr" value="" />
     			<br><br>
 
-          <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn">Submit</button>
-            <div id="myDropdown" class="dropdown-content">
-              <a href="#adaugare">Adaugare</a>
-              <a href="#stergere">Stergere</a>
-            </div>
-          </div>
+          <input type="submit" value="Adaugare clasa">
+		        <input type="submit" value="Stergere clasa">
 
         </div>
       </div>
@@ -81,12 +76,6 @@
 
   </div>
 
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js' crossorigin="anonymous"></script>
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-<script src="classroom.js" type="text/javascript"></script>
 
 </body>
 </html>
