--- a/FrontEnd/login&signup2/signup2.html
+++ b/FrontEnd/login&signup2/signup2.html
@@ -23,7 +23,7 @@
 <body>
 
 <div class="form">
-<div style="text-align: left" class="logo"></div>
+<div class="logo"></div>
 <br><br>
 <div id="signup">
 
