--- a/FrontEnd/custom_form/form.html
+++ b/FrontEnd/custom_form/form.html
@@ -35,7 +35,7 @@
                             <h4 class="list-group-item-heading">Pas 4</h4>
                         </a>
                     </li>
-                    <li>
+                    <li class="disabled">
                         <a href="#step-5">
                             <h4 class="list-group-item-heading">Pas 5</h4>
                         </a>
@@ -45,7 +45,7 @@
                             <h4 class="list-group-item-heading">Pas 6</h4>
                         </a>
                     </li>
-                    <li >
+                    <li class="disabled">
                         <a href="#step-7">
                             <h4 class="list-group-item-heading">Pas 7</h4>
                         </a>
@@ -103,7 +103,7 @@
                     <h1 class="text-center"> STEP 4</h1>
 
                     <form4 id="myform4"></form4>
-
+                     <button id="activate-step-5" class="btn btn-primary btn-md">Activate Step 4</button>
                 </div>
             </div>
         </div>
@@ -116,13 +116,25 @@
                     <h1 class="text-center"> STEP 5</h1>
 
                     <form5 id="myform5"></form5>
-
+                    <button id="activate-step-6" class="btn btn-primary btn-md">Activate Step 4</button>
                 </div>
             </div>
         </div>
     </form>
      <form class="container">
+ <form class="container">
 
+        <div class="row setup-content" id="step-6">
+            <div class="col-xs-12">
+                <div class="col-md-12 well text-center">
+                    <h1 class="text-center"> STEP 6</h1>
+
+                    <button id="activate-step-7" class="btn btn-primary btn-md">Activate Step 4</button>
+                </div>
+            </div>
+        </div>
+    </form>
+     <form class="container">
 
         <div class="row setup-content" id="step-7">
             <div class="col-xs-12">
@@ -130,7 +142,7 @@
                     <h1 class="text-center"> STEP 7</h1>
 
                     <form7 id="myform7"></form7>
-
+                    <button id="finish-button" class="btn btn-primary btn-md">Submit form</button>
                 </div>
             </div>
         </div>
