--- a/FrontEnd/custom_form/form.html
+++ b/FrontEnd/custom_form/form.html
@@ -63,12 +63,12 @@
                     <form id="myform"></form>
 
                     <!-- </form> -->
-                    <button id="activate-step-2" class="btn btn-primary btn-md">Activate Step 2</button>
+                    <button id="activate-step-2" class="btn btn-primary btn-md">Pasul urmator</button>
                 </div>
             </div>
         </div>
     </div>
-    <form class="container">
+    <div class="container">
         <div class="row setup-content" id="step-2">
             <div class="col-xs-12">
                 <div class="col-md-12 well text-center">
@@ -77,12 +77,12 @@
                     
                          <form2 id="myform2"></form2>
 
-                    <button id="activate-step-3" class="btn btn-primary btn-md">Activate Step 3</button>
+                    <button id="activate-step-3" class="btn btn-primary btn-md">Pasul urmator</button>
                 </div>
             </div>
         </div>
-    </form>
-    <form class="container">
+    </div>
+    <div class="container">
         <div class="row setup-content" id="step-3">
             <div class="col-xs-12">
                 <div class="col-md-12 well text-center">
@@ -90,12 +90,12 @@
 
                     <form3 id="myform3"></form3>
 
-                    <button id="activate-step-4" class="btn btn-primary btn-md">Activate Step 4</button>
+                    <button id="activate-step-4" class="btn btn-primary btn-md">Pasul urmator</button>
                 </div>
             </div>
         </div>
-    </form>
-    <form class="container">
+    </div>
+    <div class="container">
 
         <div class="row setup-content" id="step-4">
             <div class="col-xs-12">
@@ -103,12 +103,12 @@
                     <h1 class="text-center"> STEP 4</h1>
 
                     <form4 id="myform4"></form4>
-                     <button id="activate-step-5" class="btn btn-primary btn-md">Activate Step 4</button>
+                     <button id="activate-step-5" class="btn btn-primary btn-md">Pasul urmator</button>
                 </div>
             </div>
         </div>
-    </form>
-    <form class="container">
+    </div>
+    <div class="container">
 
         <div class="row setup-content" id="step-5">
             <div class="col-xs-12">
@@ -116,25 +116,25 @@
                     <h1 class="text-center"> STEP 5</h1>
 
                     <form5 id="myform5"></form5>
-                    <button id="activate-step-6" class="btn btn-primary btn-md">Activate Step 4</button>
+                    <button id="activate-step-6" class="btn btn-primary btn-md">Pasul urmator</button>
                 </div>
             </div>
-        </div>
-    </form>
-     <form class="container">
- <form class="container">
+ 
+    </div>
+    </div>
+     <div class="container">
 
         <div class="row setup-content" id="step-6">
             <div class="col-xs-12">
                 <div class="col-md-12 well text-center">
-                    <h1 class="text-center"> STEP 6</h1>
-
-                    <button id="activate-step-7" class="btn btn-primary btn-md">Activate Step 4</button>
+                    <h3 class="text-center"> Condiţii de încheiere a contractului</h1>
+                    <form6 id="myform6"></form6>
+                    <button id="activate-step-7" class="btn btn-primary btn-md">Pasul urmator</button>
                 </div>
             </div>
         </div>
-    </form>
-     <form class="container">
+    </div>
+     <div class="container">
 
         <div class="row setup-content" id="step-7">
             <div class="col-xs-12">
@@ -146,7 +146,7 @@
                 </div>
             </div>
         </div>
-    </form>
+    </div>
 
 
 
