[FrontEnd] Adeed "Add documents" step in form

--- a/FrontEnd/custom_form/form.html
+++ b/FrontEnd/custom_form/form.html
@@ -50,6 +50,11 @@
                             <h4 class="list-group-item-heading">Pas 7</h4>
                         </a>
                     </li>
+                     <li class="disabled">
+                        <a href="#step-8">
+                            <h4 class="list-group-item-heading">Pas 8</h4>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -142,6 +147,19 @@
                     <h1 class="text-center"> STEP 7</h1>
 
                     <form7 id="myform7"></form7>
+                    <button id="activate-step-8" class="btn btn-primary btn-md">Pasul urmator</button>
+                </div>
+            </div>
+        </div>
+    </div>
+     <div class="container">
+
+        <div class="row setup-content" id="step-8">
+            <div class="col-xs-12">
+                <div class="col-md-12 well text-center">
+                    <h1 class="text-center"> STEP 8</h1>
+
+                    <form8 id="myform8"></form8>
                     <button id="finish-button" class="btn btn-primary btn-md">Submit form</button>
                 </div>
             </div>
