[FrontEnd] Added finish button post functionality

--- a/FrontEnd/custom_form/form.html
+++ b/FrontEnd/custom_form/form.html
@@ -80,7 +80,7 @@
                     <h1 class="text-center"> STEP 2</h1>
 
                     
-                         <form2 id="myform2"></form2>
+                         <form id="myform2"></form>
 
                     <button id="activate-step-3" class="btn btn-primary btn-md">Pasul urmator</button>
                 </div>
@@ -93,7 +93,7 @@
                 <div class="col-md-12 well text-center">
                     <h1 class="text-center"> STEP 3</h1>
 
-                    <form3 id="myform3"></form3>
+                    <form id="myform3"></form>
 
                     <button id="activate-step-4" class="btn btn-primary btn-md">Pasul urmator</button>
                 </div>
@@ -107,7 +107,7 @@
                 <div class="col-md-12 well text-center">
                     <h1 class="text-center"> STEP 4</h1>
 
-                    <form4 id="myform4"></form4>
+                    <form id="myform4"></form>
                      <button id="activate-step-5" class="btn btn-primary btn-md">Pasul urmator</button>
                 </div>
             </div>
@@ -120,7 +120,7 @@
                 <div class="col-md-12 well text-center">
                     <h1 class="text-center"> STEP 5</h1>
 
-                    <form5 id="myform5"></form5>
+                    <form id="myform5"></form>
                     <button id="activate-step-6" class="btn btn-primary btn-md">Pasul urmator</button>
                 </div>
             </div>
@@ -133,7 +133,7 @@
             <div class="col-xs-12">
                 <div class="col-md-12 well text-center">
                     <h3 class="text-center"> Condiţii de încheiere a contractului</h1>
-                    <form6 id="myform6"></form6>
+                    <form id="myform6"></form>
                     <button id="activate-step-7" class="btn btn-primary btn-md">Pasul urmator</button>
                 </div>
             </div>
@@ -146,7 +146,7 @@
                 <div class="col-md-12 well text-center">
                     <h1 class="text-center"> STEP 7</h1>
 
-                    <form7 id="myform7"></form7>
+                    <form id="myform7"></form>
                     <button id="activate-step-8" class="btn btn-primary btn-md">Pasul urmator</button>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                 <div class="col-md-12 well text-center">
                     <h1 class="text-center"> STEP 8</h1>
 
-                    <form8 id="myform8"></form8>
+                    <form id="myform8"></form>
                     <button id="finish-button" class="btn btn-primary btn-md">Submit form</button>
                 </div>
             </div>
