Fixed some errors.

--- a/FrontEnd/landing_page/index.html
+++ b/FrontEnd/landing_page/index.html
@@ -2,7 +2,6 @@
 <html class="full" lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -22,7 +21,7 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" tabindex="1"  accesskey="m">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -44,7 +43,9 @@
                     </li>
                 </ul>
                 <div class="right">
-                    <a href="#"><button>LOG IN</button></a>
+                	<form action="#">
+                		<button tabindex="2"  accesskey="l">LOG IN</button>
+                	</form>
                 </div>
             </div>
             <!-- /.navbar-collapse -->
@@ -59,32 +60,34 @@
                 <div class="intro">
                     <h1>Bine ai venit la <br> Facultatea de Informatic&#259; Ia&#351;i</h1>
                     <h2>Al&#259;tur&#259;-te facult&#259;&#355;ii noastre! Creeaz&#259;&#355;i un cont, ap&#259;s&#226;nd butonul de mai jos.</h2>
-                    <a href="#"><button>SIGN UP</button></a>
+                    <form action="#">
+                    	<button tabindex="3"  accesskey="s">SIGN UP</button>
+                    </form>
                 </div>
             </div>
         </div>
     </header>
 
 <!-- Beneficii -->
-    <section id="beneficii">
+    <section id="beneficii" class="beneficii">
         <div class="container">
             <div class="row">
                 <div class="col-md-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>Ce i&#355;i oferim?</h1>
-                            <h2>
-                                <ul>
-                                    <li>un mediu academic stimulativ</li>
-                                    <li>flexibilitate &#238;n alegerea programului de studii</li>
-                                    <li>tehnologii software de v&#226;rf</li>
-                                    <li>laboratoare cu dot&#259;ri de ultim&#259; or&#259;</li>
-                                    <li>acces gratuit la documenta&#355;ii &#351;i software</li>
-                                    <li>oportunit&#259;&#355;i de stagii &#238;n strainatate</li>
-                                    <li>echip&#259; de prieteni</li>
-                                    <li>o diplom&#259; recunoscut&#259; &#351;i apreciat&#259; de toate universit&#259;&#355;ile &#351;i companiile software din lume</li>
-                                </ul>
-                            </h2>
+                            <h1 style="color: #20547E; font-size: 3em; text-shadow: unset;">Ce i&#355;i oferim?</h1>
+                            <h2 style="color: #20547E; line-height: 1.7; text-shadow: unset;">
+	                            <ul>
+	                                <li>un mediu academic stimulativ</li>
+	                                <li>flexibilitate &#238;n alegerea programului de studii</li>
+	                                <li>tehnologii software de v&#226;rf</li>
+	                                <li>laboratoare cu dot&#259;ri de ultim&#259; or&#259;</li>
+	                                <li>acces gratuit la documenta&#355;ii &#351;i software</li>
+	                                <li>oportunit&#259;&#355;i de stagii &#238;n strainatate</li>
+	                                <li>echip&#259; de prieteni</li>
+	                                <li>o diplom&#259; recunoscut&#259; &#351;i apreciat&#259; de toate universit&#259;&#355;ile &#351;i companiile software din lume</li>
+	                            </ul>
+	                        </h2>
                         </div>
                     </div>
                 </div>
@@ -99,18 +102,18 @@
     </section>
 
 <!-- Impresii -->
-    <section id="impresii">
+    <section id="impresii" class="impresii">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>Ce spun studen&#355;ii no&#351;tri?</h1>
-                            <blockquote id="first"><h4>Sunt un absolvent al Facult&#259;&#355;ii de Informatic&#259; a Universit&#259;&#355;ii "Alexandru Ioan Cuza" din Ia&#351;i. M&#259; consider, din acest punct de vedere, o persoan&#259; privilegiat&#259; c&#259; am avut sansa s&#259; fiu educat de profesori recunoscu&#355;i &#351;i deschi&#351;i, &#351;i s&#259; am colegi studen&#355;i de la care am avut multe de &#238;nv&#259;&#355;at. <br> Prin aceast&#259; &#351;coal&#259;, am reu&#351;it s&#259; fructific oportunit&#259;&#355;i, necesare &#351;i deschise tuturor colegilor; din altruism, v&#259; invit s&#259; le descoperi&#355;i singuri..."</h4>
-                            <h4 id="right">Alexandru Pruteanu (absolvent FII 2001), Microsoft Rom&#226;nia</h4>
+                            <h1 style="color: white; font-size: 3em; text-shadow: unset;">Ce spun studen&#355;ii no&#351;tri?</h1>
+                            <blockquote class="first"><h4 style="color: white; text-align: justify;">Sunt un absolvent al Facult&#259;&#355;ii de Informatic&#259; a Universit&#259;&#355;ii "Alexandru Ioan Cuza" din Ia&#351;i. M&#259; consider, din acest punct de vedere, o persoan&#259; privilegiat&#259; c&#259; am avut sansa s&#259; fiu educat de profesori recunoscu&#355;i &#351;i deschi&#351;i, &#351;i s&#259; am colegi studen&#355;i de la care am avut multe de &#238;nv&#259;&#355;at. <br> Prin aceast&#259; &#351;coal&#259;, am reu&#351;it s&#259; fructific oportunit&#259;&#355;i, necesare &#351;i deschise tuturor colegilor; din altruism, v&#259; invit s&#259; le descoperi&#355;i singuri..."</h4>
+                            <h4 class="right" style="color: white;">Alexandru Pruteanu (absolvent FII 2001), Microsoft Rom&#226;nia</h4>
                             </blockquote>
-                            <blockquote><h4>Informatica nu e un drum pe care, o dat&#259; intrat, s&#259; nu mai po&#355;i devia. Din contra, sunt o mul&#355;ime de c&#259;i prin biologie (bio-informatic&#259;), art&#259; (grafic&#259;, design), medicin&#259; (lucrul cu imagini medicale), movie industry (efecte speciale gen Matrix), economie (baze de date, securitatea tranzac&#355;iilor), fizic&#259; (informatic&#259; cuantic&#259;), &#351;i c&#226;te altele.</h4>
-                            <h4 id="right">Alexandrina Orzan (absolvent&#259; FII 2003), cercet&#259;tor &#238;n echipa MAVERICK, INRIA, Rh&ocirc;ne-Alpes</h4>
+                            <blockquote><h4 style="color: white; text-align: justify;">Informatica nu e un drum pe care, o dat&#259; intrat, s&#259; nu mai po&#355;i devia. Din contra, sunt o mul&#355;ime de c&#259;i prin biologie (bio-informatic&#259;), art&#259; (grafic&#259;, design), medicin&#259; (lucrul cu imagini medicale), movie industry (efecte speciale gen Matrix), economie (baze de date, securitatea tranzac&#355;iilor), fizic&#259; (informatic&#259; cuantic&#259;), &#351;i c&#226;te altele.</h4>
+                            <h4 class="right" style="color: white;">Alexandrina Orzan (absolvent&#259; FII 2003), cercet&#259;tor &#238;n echipa MAVERICK, INRIA, Rh&ocirc;ne-Alpes</h4>
                             </blockquote>
                         </div>
                     </div>
@@ -120,14 +123,14 @@
     </section>
 
 <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="contact">
         <div class="container">
             <div class="col-md-6">
-                <img src="./images/fii.jpg" id="contactImg" alt="FII">
+                <img src="./images/fii.jpg" class="contactImg" alt="FII">
             </div>
             <div class="col-md-6">
                     <div class="detalii">
-                    <h1>Cum ne pute&#355;i contacta?</h1>
+                    <h1 style="color: #20547E; font-size: 3em; text-shadow: unset;">Cum ne pute&#355;i contacta?</h1>
                     <h3>
                         <strong>Adres&#259;: </strong><br>
                         Facultatea de Informatic&#259;, Universitatea "Al. I. Cuza", <br>
@@ -147,7 +150,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </section>
 
 <!-- Footer -->
