Fixed some errors

--- a/FrontEnd/landing_page/index.html
+++ b/FrontEnd/landing_page/index.html
@@ -75,19 +75,17 @@
                 <div class="col-md-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1 style="color: #20547E; font-size: 3em; text-shadow: unset;">Ce i&#355;i oferim?</h1>
-                            <h2 style="color: #20547E; line-height: 1.7; text-shadow: unset;">
-	                            <ul>
-	                                <li>un mediu academic stimulativ</li>
-	                                <li>flexibilitate &#238;n alegerea programului de studii</li>
-	                                <li>tehnologii software de v&#226;rf</li>
-	                                <li>laboratoare cu dot&#259;ri de ultim&#259; or&#259;</li>
-	                                <li>acces gratuit la documenta&#355;ii &#351;i software</li>
-	                                <li>oportunit&#259;&#355;i de stagii &#238;n strainatate</li>
-	                                <li>echip&#259; de prieteni</li>
-	                                <li>o diplom&#259; recunoscut&#259; &#351;i apreciat&#259; de toate universit&#259;&#355;ile &#351;i companiile software din lume</li>
-	                            </ul>
-	                        </h2>
+	                        <h1 style="color: #20547E; font-size: 3em; text-shadow: unset;">Ce i&#355;i oferim?</h1>
+                            <ul>
+                                <li>un mediu academic stimulativ</li>
+                                <li>flexibilitate &#238;n alegerea programului de studii</li>
+                                <li>tehnologii software de v&#226;rf</li>
+                                <li>laboratoare cu dot&#259;ri de ultim&#259; or&#259;</li>
+                                <li>acces gratuit la documenta&#355;ii &#351;i software</li>
+                                <li>oportunit&#259;&#355;i de stagii &#238;n strainatate</li>
+                                <li>echip&#259; de prieteni</li>
+                                <li>o diplom&#259; recunoscut&#259; &#351;i apreciat&#259; de toate universit&#259;&#355;ile &#351;i companiile software din lume</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -131,12 +129,12 @@
             <div class="col-md-6">
                     <div class="detalii">
                     <h1 style="color: #20547E; font-size: 3em; text-shadow: unset;">Cum ne pute&#355;i contacta?</h1>
-                    <h3>
+                    <h2 style="color: #000; font-size: 1.7em; text-shadow: unset;">
                         <strong>Adres&#259;: </strong><br>
                         Facultatea de Informatic&#259;, Universitatea "Al. I. Cuza", <br>
                         General Berthelot, 16, <br>
                         IA&#350;I, 700483, ROM&#194;NIA <br>
-                    </h3>
+                    </h2>
                     <h3><strong>Telefon: </strong><a href="tel:+40232201090">+40 232 201 090</a></h3>
                     <h3><strong>Fax: </strong>+40 232 201 490</h3>
                     <h3><strong>E-mail: </strong><a href="mailto:secretariat@info.uaic.ro">secretariat@info.uaic.ro</a></h3>
