--- a/FrontEnd/dashboard/dashboard.html
+++ b/FrontEnd/dashboard/dashboard.html
@@ -4,15 +4,11 @@
 <title>Dashboard</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="dashboard.css" type="text/css" media="screen">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Montserrat:700,400|Roboto:400,100,300,500,900'
-    rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+<link href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Montserrat:700,400|Roboto:400,100,300,500,900"
+    rel='stylesheet' type='text/css'/>
 </head>
-<body bgcolor="#e6e6e6">
-
-
-
-
+<body>
 
 <ul>
 
@@ -21,49 +17,50 @@
  <!-- <li><div class="avatar"></div><h3>John Smith</h3></li> -->
 
 <div class="content">
-    <img src="avatar.png"/ alt="" width="50px">
+    <img src="avatar.png" width="25%" alt="avatar">
     <h2>John Smith</h2>
 </div>​
 
 
 
-  <li><a class="active" href="#dash">Dashboard</a></li>
+  <li><a class="active" href="dashboard.html">Dashboard</a></li>
   <li><a href="#settings">Settings</a></li>
-  <li><a href="#form">Application Form</a></li>
-  <li><a href="#disconn">Disconnect</i></a></li>
-  <br>
-  <hr>
-  <br><br><br><br><br>
-  <br><br><br><br><br><br>
+  <li><a href="form.html">Application Form</a></li>
+  <li><a href="#disconn">Disconnect</a></li>
 
-      <p id="contact">
-        Contact<br>
-        Adress:<br>
-        Facultatea de informatica,<br>
-        Universitatea "Al. I. Cuza",<br>
-        General Berthelot, 16, IASI <br>
-        700483, ROMANIA <br>
-        Phone: +40 232 201090<br>
-        E-mail: secretariat@info.uaic.ro
-      	</p>
+  <hr>
+
+
+  <p id="contact">
+    Contact<br>
+    Adress:<br>
+    Facultatea de informatica,<br>
+    Universitatea "Al. I. Cuza",<br>
+    General Berthelot, 16, IASI <br>
+    700483, ROMANIA <br>
+    Phone: +40 232 201090<br>
+    E-mail: secretariat@info.uaic.ro
+    </p>
+
 </ul>
+
+
 
 <!-- <div id="section-dash" class="tab-content" style="margin-left:20%;padding:1px 16px;height:1000px;">
  <input type="text" name="search" placeholder="Search">
  -->
 
 <div class="main">
-
+<!--
   <div id="header">
-    <!-- <div class="header-nav"> -->
-       <input type="text" name="search" placeholder="Search..">
-    <!-- </div>-->
-   </div>
 
+       <input type="text" name="search" value="Search..">
+   </div>
+-->
    <div class="widget-box sample-widget2">
          <div class="widget-header">
            <h2>Statusul aplicatiei:</h2>
-           <i class="fa fa-cog"></i>
+        <!--   <i class="fa fa-cog"></i>  -->
          </div>
          <div class="widget-content">
            <h3> Verificat</h3>
@@ -74,7 +71,7 @@
            <div class="widget-box sample-widget2">
                  <div class="widget-header">
                    <h2>Timp ramas pana la examen:</h2>
-                   <i class="fa fa-cog"></i>
+               <!--     <i class="fa fa-cog"></i> -->
                  </div>
                  <div class="widget-content">
                    <h3> 25 de zile</h3>
@@ -84,7 +81,7 @@
                <div class="widget-box sample-widget2">
                      <div class="widget-header">
                        <h2>Timp ramas pana la rezultate:</h2>
-                       <i class="fa fa-cog"></i>
+                 <!--      <i class="fa fa-cog"></i>  -->
                      </div>
                      <div class="widget-content">
                        <h3> 30 de zile</h3>
@@ -94,7 +91,7 @@
                    <div class="widget-box sample-widget2">
                          <div class="widget-header">
                            <h2>Statistici:</h2>
-                           <i class="fa fa-cog"></i>
+                     <!--      <i class="fa fa-cog"></i>   -->
                          </div>
                          <div class="widget-content">
                            <h3> S-au inscris 127 de candidati.</h3>
@@ -108,7 +105,7 @@
          <i class="fa fa-cog"></i>
        </div>
        <div class="widget-content">
-         <img src="info.png" width="50%"  >
+         <img src="info.png" width="50%" alt="info" >
        </div>
      </div>
 
@@ -130,7 +127,6 @@
 
    </div>
 
-  </div>
 
 </body>
 </html>
