Fixed some errors.

--- a/FrontEnd/dashboard/classroom.html
+++ b/FrontEnd/dashboard/classroom.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="classroom.css" type="text/css" media="screen">
 
 </head>
-<body bgcolor="#e6e6e6">
+<body>
 
 <ul>
 
@@ -15,8 +15,8 @@
  <!-- <li><div class="avatar"></div><h3>John Smith</h3></li> -->
 
 <div class="content">
-    <img src="avatar.png"/ alt="" width="50px">
-    <h3>Administrator</h3>
+    <img src="avatar.png" width="25%" alt="avatar">
+    <h2>Administrator</h2>
 </div>​
 
   <li><a href="#dash">Dashboard</a></li>
@@ -27,9 +27,6 @@
   <li><a href="#disconn">Disconnect</a></li>
   <br>
   <hr>
-  <br><br><br><br>
-  <br><br><br><br>
-
       <p id="contact">
         Contact<br>
         Adress:<br>
@@ -58,13 +55,13 @@
           <br>
           <label for="cod">Cod sala:<br>
     			</label> <input type="text" name="cod" id="cod" value="" />
-    			<br><br>
+    			<br>
     			<label for="etaj">Etaj:<br>
     			</label> <input type="text" name="etaj" id="etaj" value="" />
-    			<br><br>
+    			<br>
     			<label for="nr">Numar locuri:<br>
     			</label> <input type="number" name="nr" id="nr" value="" />
-    			<br><br>
+    			<br>
 
           <input type="submit" value="Adaugare clasa">
 		        <input type="submit" value="Stergere clasa">
@@ -73,8 +70,6 @@
       </div>
 
    </div>
-
-  </div>
 
 
 </body>
