--- a/FrontEnd/dashboard/dashboard_admin.html
+++ b/FrontEnd/dashboard/dashboard_admin.html
@@ -5,23 +5,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="dashboard_admin.css" type="text/css" media="screen">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Montserrat:700,400|Roboto:400,100,300,500,900'
+<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900%7CMontserrat:700,400%7CRoboto:400,100,300,500,900'
     rel='stylesheet' type='text/css'>
+
 </head>
-<body bgcolor="#e6e6e6">
-
-
-
-
+<body>
 
 <ul>
 
 <div class="logo"></div>
 
- <!-- <li><div class="avatar"></div><h3>John Smith</h3></li> -->
 
 <div class="content">
-    <img src="avatar.png"/ alt="" width="50px">
+    <img src="avatar.png" alt="avatar" width=25%>
     <h3>Administrator</h3>
 </div>​
 
@@ -29,14 +25,12 @@
 
   <li><a class="active" href="#dash">Dashboard</a></li>
   <li><a href="#settings">Settings</a></li>
-  <li><a href="#view">View Applications</a></li>
-  <li><a href="#teachers">Teachers</a></li>
-  <li><a href="#class">Classrooms</a></li>
+  <li><a href="#form">View Applications</a></li>
+  <li><a href="#form">Teachers</a></li>
+  <li><a href="#form">Classrooms</a></li>
   <li><a href="#disconn">Disconnect</a></li>
-  <br>
   <hr>
-  <br><br><br><br><br>
-  <br><br><br><br><br>
+
 
       <p id="contact">
         Contact<br>
@@ -50,16 +44,11 @@
       	</p>
 </ul>
 
-<!-- <div id="section-dash" class="tab-content" style="margin-left:20%;padding:1px 16px;height:1000px;">
- <input type="text" name="search" placeholder="Search">
- -->
 
 <div class="main">
 
   <div id="header">
-    <!-- <div class="header-nav"> -->
-       <input type="text" name="search" placeholder="Search..">
-    <!-- </div>-->
+       <input type="text" name="search" placeholder="Search.." value="">
    </div>
    
 <div class="widget-box sample-widget2">
@@ -120,8 +109,6 @@
       </div>
 
    </div>
-
-  </div>
 
 </body>
 </html>
