--- a/FrontEnd/dashboard/profesori.html
+++ b/FrontEnd/dashboard/profesori.html
@@ -45,14 +45,14 @@
 <div class="main">
 <div class="widget-box sample-widget">
         <div class="widget-header">
-          <h2>Classroom:</h2>
+          <h2>Teachers:</h2>
           <i class="fa fa-cog"></i>
         </div>
         <div class="widget-content">
           <label for="cod">Nume:<br>
-    			</label> <input type="text" name="cod" id="cod" value="" /><br>
+    			</label> <input type="text" name="nume" id="nume" value="" /><br>
     			<label for="etaj">Prenume:<br>
-    			</label> <input type="text" name="etaj" id="etaj" value="" /><br>
+    			</label> <input type="text" name="prenume" id="prenume" value="" /><br>
     			<label for="nr">CNP:<br>
     			</label> <input type="number" name="nr" id="nr" value="" /><br>
 		<input type="submit" value="Adaugare profesor">
