--- a/FrontEnd/dashboard/profesori.html
+++ b/FrontEnd/dashboard/profesori.html
@@ -49,9 +49,9 @@
           <i class="fa fa-cog"></i>
         </div>
         <div class="widget-content">
-          <label for="cod">Nume:<br>
+          <label for="nume">Nume:<br>
     			</label> <input type="text" name="nume" id="nume" value="" /><br>
-    			<label for="etaj">Prenume:<br>
+    			<label for="prenume">Prenume:<br>
     			</label> <input type="text" name="prenume" id="prenume" value="" /><br>
     			<label for="nr">CNP:<br>
     			</label> <input type="number" name="nr" id="nr" value="" /><br>
